Fix bug 183848: if Internet Config fails to give us info about the app used to launch a file, ask Launch Services directly. Patch by sdagley, r=ccarlen, sr=sfraser.